# aoc2022

./: aoc2022.opam  aoc2022.opam.template  dune-project  flake.nix
.github/workflows/: ci.yaml
days/0-sample/: dune  solution.ml
days/0-sample/input.t/: run.t
days/1-calorie-counting/: solution.ml
days/1-calorie-counting/example.t/: run.t
days/1-calorie-counting/input.t/: run.t
days/1-calories/: solution.ml
days/1-calories/example.t/: run.t
days/1-calories/input.t/: run.t
days/2-rock-paper-scissors/: solution.ml
days/2-rock-paper-scissors/example.t/: run.t
days/2-rock-paper-scissors/input.t/: run.t
days/3-rucksack-reorganization/: dune  solution.ml
days/3-rucksack-reorganization/example.t/: run.t
days/3-rucksack-reorganization/input.t/: run.t
days/4-camp-cleanup/: dune  solution.ml
days/4-camp-cleanup/example.t/: run.t
days/4-camp-cleanup/input.t/: run.t
days/5-supply-stacks/: dune  solution.ml
days/5-supply-stacks/example.t/: run.t
days/5-supply-stacks/input.t/: run.t
days/6-tuning-trouble/: solution.ml
days/6-tuning-trouble/example.t/: run.t
days/6-tuning-trouble/example1.t/: run.t
days/6-tuning-trouble/example2.t/: run.t
days/6-tuning-trouble/example3.t/: run.t
days/6-tuning-trouble/example4.t/: run.t
days/6-tuning-trouble/input.t/: run.t
days/7-no-space-left-on-device/: solution.ml
days/8-treetop-tree-house/: dune  solution.ml
days/9-rope-bridge/: solution.ml
days/9-rope-bridge/example.t/: run.t
ext/: dune  ext.ml  extFormat.mli  extList.ml  extList.mli  extRead.ml  extRead.mli  extString.mli  extWrite.mli
(+6 files in other folders)
